--- a/index.html
+++ b/index.html
@@ -1,78 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javier Mercedes</title>
-    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Russo+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="default.css">
-</head>
-<body>
-    <section class="s1">
-        <div class="main-container">
-            <div class="gretting-wrapper">
-                <h1>Hi, I'm Javier Mercedes</h1>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Javier Emmanuel Mercedes</title>
+        <link rel="icon" href="images/developer.png" />
+        <link rel="stylesheet" href="index.css" />
+    </head>
+    <body>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li id="about">/about</li>
+                    <li id="contact">/contact</li>
+                </ul>
+            </nav>
+            <main>
+                <h1>kiritoxd01:$ <span class="cursor">|</span></h1>
+                <h3>Find me online:</h3>
+                <ul>
+                    <li>
+                        <a href="https://github.com/KiritoXD01" target="_blank"
+                            >GitHub</a
+                        >
+                    </li>
+                    <li>
+                        <a
+                            href="https://www.linkedin.com/in/javier-emmanuel-mercedes-27bb72173/"
+                            target="_blank"
+                            >Linkedin</a
+                        >
+                    </li>
+                </ul>
+            </main>
+        </div>
+
+        <div class="hidden">
+            <div id="about-content">
+                <h2>about-me:$<span class="cursor">|</span></h2>
+                <p>
+                    My name is Javier Mercedes and I have been programming or 5
+                    years.
+                </p>
+                <p>
+                    Some of the languages that I work with include PHP,
+                    Javascript, Typescript and Python
+                </p>
             </div>
-            
-            <div class="intro-wrapper">
-                <div class="nav-wrapper">
-                    <div class="dots-wrapper">
-                        <div id="dot-1" class="browser-dot"></div>
-                        <div id="dot-2" class="browser-dot"></div>
-                        <div id="dot-3" class="browser-dot"></div>
-                    </div>
-                    <ul id="navigation">
-                        <li>
-                            <a href="#">Contact</a>
-                        </li>
-                    </ul>                    
-                </div>
-                <div class="left-column">
-                    <img id="profile_pic" src="images/developer.png">
-                    <h5 class="personalize">Personalize Theme</h5>
-                    <div id="theme-options-wrapper">
-                        <div id="light-mode" class="theme-dot"></div>
-                        <div id="blue-mode" class="theme-dot"></div>
-                        <div id="green-mode" class="theme-dot"></div>
-                        <div id="purple-mode" class="theme-dot"></div>
-                    </div>
-                    <p id="settings-note">
-                        *This settings will be saved for your next visit
-                    </p>
-                </div>
-                <div class="right-column">
-                    <div id="preview-shadow">
-                        <div id="preview">
-                            <div id="corner-tl" class="corner"></div>
-                            <div id="corner-tr" class="corner"></div>
-                            <h3>What I do</h3>
-                            <p>Hi There!, I’m Javier Mercedes and I'm a FullStack Web Developer!</p>
-                            <div id="corner-bl" class="corner"></div>
-                            <div id="corner-br" class="corner"></div>
-                        </div>            
-                    </div>                            
-                </div>
+            <div id="contact-content">
+                <h2>contact-me:$<span class="cursor">|</span></h2>
+                <p>You can contact me at:</p>
+                <ul>
+                    <li>
+                        Email:
+                        <a href="mailto:manuelmercedez10@gmail.com"
+                            >manuelmercedez10@gmail.com</a
+                        >
+                    </li>
+                </ul>
             </div>
         </div>
-    </section>
-
-    <section class="s2">
-        <div class="main-container">
-            <div></div>
-        </div>
-    </section>
-
-    <section class="s1">
-        <div class="main-container">
-            Portafolio
-        </div>
-    </section>
-
-    <section class="s2">
-        <div class="main-container">
-            Contact
-        </div>
-    </section>
-</body>
+        <script src="winbox.bundle.js"></script>
+        <script src="index.js"></script>
+    </body>
 </html>
