--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div id="about-content">
                 <h2>about-me:$<span class="cursor">|</span></h2>
                 <p>
-                    My name is Javier Mercedes and I have been programming or 5
+                    My name is Javier Mercedes and I have been programming for 5
                     years.
                 </p>
                 <p>
